# zippy

./: CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: ci.yml
include/: zippy_core.h  zippy_request.h  zippy_routing.h  zippy_utils.h
include/body_parsers/: multipart_parser.h  url_encoded_parser.h
include/exceptions/: zippy_exceptions.h
include/extensions/: extension_factory.h
include/interfaces/: body_parser.h  buffer_reader.h  buffer_writer.h
include/logging/: ilogger.h
include/networking/: socket_buffer_reader.h  socket_buffer_writer.h
notes/: http.md
src/: extension_factory.cpp  main.cpp  socket_buffer_reader.cpp  socket_buffer_writer.cpp  zippy_core.cpp  zippy_exceptions.cpp  zippy_routing.cpp  zippy_utils.cpp
src/extensions/: console_logger.cpp  file_logger.cpp
src/parsers/: multipart_parser.cpp  url_encoded_parser.cpp
tests/: CMakeLists.txt  test_trie.cpp
workflows/github/: ci.yml
